Generate test coverage report using Jacoco plugin